<resources>
    <string name="app_name">REST</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="item_one">Item One</string>
    <string name="item_two">Item two</string>
    <string name="item_three">Item three</string>
    <string name="item_four">Item four</string>
    <string name="item_five">Item five</string>
    <string name="item_six">Item six</string>
    <string name="button_text">Button</string>
    <string name="rest_acronym">R.E.S.T</string>
    <string name="rest_meaning">Recovery Employment Support Training</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="group_name">group name</string>
    <string name="dash">-</string>
    <string name="friday_schedule">Friday Schedule</string>
    <string name="monday_schedule">Monday Schedule</string>
    <string name="know_more">Please choose a day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="schedule_text">Schedule</string>
    <string name="saturday_schedule">"Saturday Schedule "</string>
    <string name="sunday_schedule">Sunday Schedule</string>
    <string name="thursday_schedule">Thursday Schedule</string>
    <string name="tuesday_schedule">Tuesday Schedule</string>
    <string name="wednesday_schedule">Wednesday Schedule</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
</resources>
