<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grade"
    tools:context="com.wesleyruede.rest.ui.daysoftheweek.SaturdayActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amarante"
        android:textColor="@android:color/black"
        android:text="@string/saturday_schedule"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="302dp"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/grade_two">

            <TextView
                android:id="@+id/dash_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dash"
                app:layout_constraintEnd_toStartOf="@+id/saturday_group_end_time_one"
                app:layout_constraintStart_toEndOf="@+id/saturday_group_start_time_one"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_name_one" />

            <TextView
                android:id="@+id/dash_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dash"
                app:layout_constraintEnd_toStartOf="@+id/saturday_group_end_time_two"
                app:layout_constraintStart_toEndOf="@+id/saturday_group_start_time_three"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_name_three" />

            <TextView
                android:id="@+id/saturday_group_name_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/group_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saturday_group_start_time_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/start_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_name_one" />

            <TextView
                android:id="@+id/saturday_group_end_time_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="120dp"
                android:text="@string/end_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/saturday_group_name_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/group_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_start_time_one" />

            <TextView
                android:id="@+id/saturday_group_start_time_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/start_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_name_two" />

            <TextView
                android:id="@+id/saturday_group_end_time_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="120dp"
                android:text="@string/end_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_end_time_one" />

            <TextView
                android:id="@+id/saturday_group_name_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/group_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_start_time_two" />

            <TextView
                android:id="@+id/saturday_group_start_time_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/start_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_name_three"
                app:layout_constraintVertical_bias="0.016" />

            <TextView
                android:id="@+id/saturday_group_end_time_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="120dp"
                android:text="@string/end_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saturday_group_end_time_three"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/dash_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dash"
                app:layout_constraintEnd_toStartOf="@+id/saturday_group_end_time_three"
                app:layout_constraintStart_toEndOf="@+id/saturday_group_start_time_two"
                app:layout_constraintTop_toBottomOf="@id/saturday_group_name_two" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/saturday_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/appBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>
